--- a/html/page/css/main_2024/style.css
+++ b/html/page/css/main_2024/style.css
@@ -1,7 +1,7 @@
 /* intro */
 body.intro { height: 100%; background: url(../../images/main_2024/intro/intro_bg02.png) #ffffff top center no-repeat; touch-action: pan-y; } 
- .introWrap .innerSection { padding: 0 20px 150px; } 
- .introWrap .logo { margin: 90px 0 66px; text-align: center; } 
+ .introWrap .innerSection { padding: 0 20px 0; } 
+ .introWrap .logo { margin: 40px 0 40px; text-align: center; } 
  .introWrap .introList { display: flex; justify-content: space-between; } 
  .introWrap .introList > li { width: 370px; background: #fff; border-radius: 30px 85px 30px 30px; box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.2); border: 5px solid #fff; overflow: hidden; } 
  .introWrap .introList > li:hover { border-color: #2aa6c1; } 
@@ -77,11 +77,11 @@ body.intro { height: 100%; background: url(../../images/main_2024/intro/intro_bg
 
  /* header */
 #renewHeader .nheader_top { background: #2aa6c1; } 
-#renewHeader .h_util { display: flex; align-items: center; justify-content: space-between; height: 90px; } 
+#renewHeader .h_util { display: flex; align-items: center; justify-content: space-between; height: 70px; } 
 #renewHeader .h_util ul { display: flex; } 
 #renewHeader .h_util ul li + li { margin-left: 16px; } 
 #renewHeader .h_util ul li a:hover { background: #fff; color: #2aa6c1; border-radius: 10px; } 
-#renewHeader .h_util ul li a { display: block; padding: 10px 14px; color: #fff; font-size: 20px; font-weight: 500; line-height: 1; } 
+#renewHeader .h_util ul li a { display: block; padding: 10px 14px; color: #fff; font-size: 18px; font-weight: 500; line-height: 1; } 
 #renewHeader .h_cont { display: flex; align-items: center; justify-content: space-between; height: 70px; margin-top: 25px; } 
 #renewHeader .h_cont .logo { height: 70px; flex-shrink: 0; margin-bottom: 6px; } 
 #renewHeader .h_cont .logo a { display: block; max-width: 100%; height: 100%; } 
@@ -114,8 +114,8 @@ body.intro { height: 100%; background: url(../../images/main_2024/intro/intro_bg
 #renewHeader .h_gnb_menu { display: grid; grid-template-columns: 976px 284px; justify-content: center; } 
 #renewHeader .h_gnb_bg::after { content: ''; width: 50%; height: 100%; position: absolute; top: 0; left: 50%; background: #edf6fd; z-index: 1; } 
 #renewHeader .h_gnb_menu .gnb_item { position: relative; padding: 50px 0 25px; z-index: 2; } 
-#renewHeader .h_gnb_menu .gnb_item.menu { display: grid; width: 976px; grid-template-areas: "depth_01 depth_01 depth_01 depth_01 depth_01"; background: #fff; } 
-#renewHeader .h_gnb_menu .gnb_item.menu .depth_01 { position: relative; padding: 0 15px; min-height: 204px; align-self: stretch; } 
+#renewHeader .h_gnb_menu .gnb_item.menu { display: grid; width: 976px; grid-template-areas: "depth_01 depth_01 depth_01 depth_01 depth_01"; background: #fff;} 
+#renewHeader .h_gnb_menu .gnb_item.menu .depth_01 { display: flex; position: relative; padding: 0 15px; min-height: 204px; align-self: stretch; flex-direction: column;} 
 #renewHeader .h_gnb_menu .gnb_item.menu .depth_01::before { content: ''; width: 1px; position: absolute; top: 4px; bottom: 4px; left: 0; background: #ececec; } 
 #renewHeader .h_gnb_menu .gnb_item.menu .depth_01 .etc_txt { position: absolute; top: -26px; left: 15px; color: #008ae0; font-size: 12px; line-height: 16px; } 
 #renewHeader .h_gnb_menu .gnb_item.menu .depth_01.double .depth_02 { display: grid; grid-template-columns: auto auto; gap: 0 20px; } 
@@ -123,7 +123,7 @@ body.intro { height: 100%; background: url(../../images/main_2024/intro/intro_bg
 #renewHeader .h_gnb_menu .gnb_item.menu .depth_02 a { color: #000; font-size: 14px; font-weight: 500; line-height: 28px; } 
 #renewHeader .h_gnb_menu .gnb_item.menu .depth_02 a:hover,
 #renewHeader .h_gnb_menu .gnb_item.menu .depth_02 a:focus { color: #008ae0; } 
-#renewHeader .h_gnb_menu .gnb_item.menu .depth_01 .extra { display: block; margin-top: 34px; padding: 10px 15px; background: #f5f5f5; border: 1px solid #d2d2d2; border-radius: 5px; } 
+#renewHeader .h_gnb_menu .gnb_item.menu .depth_01 .extra { display: block; margin-top: auto; padding: 10px 15px; background: #f5f5f5; border: 1px solid #d2d2d2; border-radius: 5px; } 
 #renewHeader .h_gnb_menu .gnb_item.menu .depth_01 .extra p { color: #000; font-size: 14px; font-weight: 500; } 
 #renewHeader .h_gnb_menu .gnb_item.menu .depth_01 .extra span { display: block; font-size: 12px; font-weight: 400; } 
 #renewHeader .h_gnb_menu .gnb_item.links { width: 248px; padding: 24px 32px; } 
@@ -254,8 +254,8 @@ body.intro { height: 100%; background: url(../../images/main_2024/intro/intro_bg
 #renewMain .mainVisual .counselingWrap .chatLive p::before { content: ''; width: 21px; height: 18px; position: absolute; top: 5px; left: 16px; background: url(../../images/main_2024/main/chat_icon01.png) no-repeat; } 
 
 /* employ company */
-#renewMain .companyWrap .companyList { display: flex; } 
-#renewMain .companyWrap .companyList > li { width: calc(100% / 4 - 15px); margin-right: 20px; margin-top: 20px; background: #fff; border-radius: 10px; border: 1px solid #dadada; overflow: hidden; } 
+#renewMain .companyWrap .companyList { display: flex; justify-content: space-between; } 
+#renewMain .companyWrap .companyList > li { width: calc(100% / 4 - 15px); margin-top: 20px; background: #fff; border-radius: 10px; border: 1px solid #dadada; overflow: hidden; } 
 #renewMain .companyWrap .companyList > li a { display: block; width: 100%; height: 100%; } 
 #renewMain .companyWrap .companyList .imgWrap img { width: 100%; height: 179px; overflow: hidden; } 
 #renewMain .companyWrap .companyList .txtWrap { padding: 20px 25px; display: flex; flex-direction: column; } 
