--- a/html/event/css/event02.css
+++ b/html/event/css/event02.css
@@ -49,7 +49,7 @@
 .eventWrap .event01 .ev_box02 { max-width: 800px; margin: 55px auto 0; padding: 40px 10px 26px 60px; position: relative; background: #fff; border: 1px solid #687aff; border-radius: 20px; } 
 .eventWrap .event01 .ev_box02 .tit p { display: inline-flex; width: 270px; height: 40px; padding-top: 4px; position: absolute; left: 50%; top: -20px; transform: translateX(-50%); background: #ff77f2; color: #000; font-size: 20px; align-items: center; justify-content: center; border: 1px solid #687aff; border-radius: 30px; } 
 .eventWrap .event01 .ev_box02 .ev_etc li + li { margin-top: 10px; } 
-.eventWrap .event01 .ev_box02 .ev_etc p { padding-left: 30px; position: relative; color: #000; font-size: 18px; letter-spacing: -0.5px; } 
+.eventWrap .event01 .ev_box02 .ev_etc p { padding-left: 30px; position: relative; color: #000; font-size: 18px; letter-spacing: -0.5px; word-break: keep-all;} 
 .eventWrap .event01 .ev_box02 .ev_etc li:nth-child(1) p::before { top: 4px; } 
 .eventWrap .event01 .ev_box02 .ev_etc p::before { content: ''; width: 20px; height: 20px; position: absolute; top: 0; left: 0; background: url(../images/eventImg/event02/ev_cont02_icon02.png) no-repeat; background-size: contain; } 
 .eventWrap .event01 .ev_box02 .ev_etc p span { color: #ff44ed; font-size: 24px; } 
@@ -185,7 +185,6 @@
 .eventWrap .event01 .ev_box02 .tit p { width: 80%; height: 30px; font-size: 18px; } 
 .eventWrap .event01 .ev_box02 { margin: 40px auto 0; padding: 30px 10px 20px; } 
 .eventWrap .event01 .ev_box02 .ev_etc p::before { width: 12px; height: 12px; } 
-.eventWrap .event01 .ev_box02 .ev_etc li:nth-child(1) p::before { top: 2px; } 
 .eventWrap .event01 .ev_box02 .ev_etc p span { font-size: 16px; } 
 .eventWrap .event01 .ev_box02 .ev_etc p { padding-left: 18px; font-size: 14px; } 
 
@@ -204,13 +203,13 @@
 .eventWrap .event02 .titBox.icon02::before { width: 42px; height: 56px; margin: 0 auto 10px; } 
 .eventWrap .event02 .titBox p { font-size: 22px; } 
 .eventWrap .event02 .titBox { margin-bottom: 20px; } 
-.eventWrap .event02 .ev_box01 li { padding: 20px 10px; border-radius: 20px; flex-direction: column; } 
+.eventWrap .event02 .ev_box01 li { padding: 20px 30px; border-radius: 20px; flex-direction: column; } 
 .eventWrap .event02 .ev_box01 li::before { width: 70px; height: 70px; margin: 0 auto 10px; background-size: contain !important; } 
 .eventWrap .event02 .ev_box01 li { text-align: center; } 
 .eventWrap .event02 .ev_box01 li strong { margin: 0 0 10px; font-size: 18px; } 
 .eventWrap .event02 .ev_box01 li p { font-size: 14px; word-break: keep-all;} 
 .eventWrap .event02 .ev_box02 .list_box { padding: 20px 10px 0; border-radius: 20px; } 
-.eventWrap .event02 .ev_box02 li::before { width: 15px; height: 13px; } 
+.eventWrap .event02 .ev_box02 li::before { width: 15px; height: 13px; top: 2px;} 
 .eventWrap .event02 .ev_box02 li { padding-left: 20px; font-size: 14px; } 
 .eventWrap .event02 .ev_box02 li + li { margin-top: 10px; } 
 .eventWrap .event02 .ev_box02 { margin-top: 30px; } 
@@ -218,7 +217,7 @@
 .eventWrap .event02 .ev_box02 .linkWrap a img { max-width: 200px; } 
 
 .eventWrap .event02 .event_slide .item strong span { width: 35px; height: 35px; margin: 0 auto 10px; position: static; font-size: 20px; border: 3px solid #c5e6f0; } 
-.eventWrap .event02 .event_slide .item { height: auto; padding: 20px 10px 100px; border-radius: 20px; background-size: auto 40%; text-align: center; background-position: center bottom 10px; background-size: 30%; } 
+.eventWrap .event02 .event_slide .item { height: auto; padding: 20px 10px 120px; border-radius: 20px; background-size: auto 40%; text-align: center; background-position: center bottom 10px; background-size: 30%; } 
 .eventWrap .event02 .event_slide .item strong { min-height: auto; font-size: 18px; word-break: keep-all; } 
 .eventWrap .event02 .event_slide .item ul { display: flex; flex-direction: column; align-items: center; } 
 .eventWrap .event02 .event_slide .item li { margin-top: 10px; font-size: 14px; } 
@@ -240,8 +239,8 @@
 .eventWrap .event03 li a strong { font-size: 18px; } 
 .eventWrap .event03 li a p { margin-bottom: 10px; font-size: 16px; word-break: keep-all; } 
 .eventWrap .event03 li a .linkBtn { height: 30px; margin: auto auto 0; font-size: 14px; } 
-.eventWrap .event03 li a { padding: 20px 0; } 
-.eventWrap .event03 li:not(:nth-child(2)) a { padding: 20px 0; } 
+.eventWrap .event03 li a { padding: 20px 30px; } 
+.eventWrap .event03 li:not(:nth-child(2)) a { padding: 20px 30px; } 
 .eventWrap .event03 .innerSection { padding: 30px 0; } 
 
  .eventWrap .evFooter .innerSection { padding: 30px 0; } 
