--- a/html/page/css/new/mypage.css
+++ b/html/page/css/new/mypage.css
@@ -252,7 +252,7 @@
 .mytb2-type .table > thead > tr > th { padding: 10px 10px; background: #ececec; font-weight: 500; border-left: 1px solid #ccc; } 
 .mytb2-type .table > tbody > tr > td:first-child { border-left: none; } 
 .mytb2-type .table > tbody > tr > td { padding: 15px 5px; border-top: 1px solid #ddd; border-left: 1px solid #ccc; vertical-align: middle; line-height: 1.5; } 
-.t_ellips { overflow: hidden; white-space: nowrap; text-overflow: ellipsis;} 
+.t_ellips {display: block !important; overflow: hidden; white-space: nowrap; text-align: left !important; text-overflow: ellipsis;} 
 
 
 /* 팝업 */
